tests/machine/x/c/load_yaml.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/load_yaml.c:189:3: error: conflicting types for ‘Person’; have ‘struct <anonymous>’
  189 | } Person;
      |   ^~~~~~
/workspace/mochi/tests/machine/x/c/load_yaml.c:168:23: note: previous declaration of ‘Person’ with type ‘Person’
  168 | typedef struct Person Person;
      |                       ^~~~~~
/workspace/mochi/tests/machine/x/c/load_yaml.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/load_yaml.c:192:3: error: unknown type name ‘list_Person’
  192 |   list_Person people = _load_json("../interpreter/valid/people.yaml");
      |   ^~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/load_yaml.c:192:24: error: incompatible types when initializing type ‘int’ using type ‘list_map_string’
  192 |   list_Person people = _load_json("../interpreter/valid/people.yaml");
      |                        ^~~~~~~~~~
/workspace/mochi/tests/machine/x/c/load_yaml.c:193:54: error: request for member ‘len’ in something not a structure or union
  193 |   list_adultsItem _t1 = list_adultsItem_create(people.len);
      |                                                      ^
/workspace/mochi/tests/machine/x/c/load_yaml.c:195:33: error: request for member ‘len’ in something not a structure or union
  195 |   for (int _t3 = 0; _t3 < people.len; _t3++) {
      |                                 ^
/workspace/mochi/tests/machine/x/c/load_yaml.c:196:22: error: request for member ‘data’ in something not a structure or union
  196 |     Person p = people.data[_t3];
      |                      ^
/workspace/mochi/tests/machine/x/c/load_yaml.c:200:42: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
  200 |     _t1.data[_t2] = (adultsItem){.name = p.name, .email = p.email};
      |                                          ^
/workspace/mochi/tests/machine/x/c/load_yaml.c:200:42: note: (near initialization for ‘(anonymous).name’)
/workspace/mochi/tests/machine/x/c/load_yaml.c:200:59: warning: initialization of ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
  200 |     _t1.data[_t2] = (adultsItem){.name = p.name, .email = p.email};
      |                                                           ^
/workspace/mochi/tests/machine/x/c/load_yaml.c:200:59: note: (near initialization for ‘(anonymous).email’)

   1: #include <stdio.h>
